Opened 14 years ago

Closed 14 years ago

Last modified 14 years ago

#6973 closed bug (fixed)

[print_addon_server] crashes in pthread_key_call_destructors ()

Reported by: diver Owned by: laplace
Priority: normal Milestone: R1
Component: Servers/print_addon_server Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

This is hrev39808 gcc4hybrid.

  • Add new printer in Printers preflet
  • Choose Printer type: PCL6 Compatible
  • Choose Connected to: HP JetDirect
  • Trying to print using this printer crashes print_addon_server:
    Thread 780 caused an exception: Segment violation
    [...]
    [Switching to team /boot/system/servers/print_addon_server (780) thread print_addon_server (780)]
    0x018f943b in ?? ()
    (gdb) bt
    #0  0x018f943b in ?? ()
    #1  0x00242b90 in __pthread_key_call_destructors ()
       from /boot/system/lib/libroot.so
    #2  0x00242466 in __pthread_destroy_thread () from /boot/system/lib/libroot.so
    #3  0x00235ed4 in _thread_do_exit_work () from /boot/system/lib/libroot.so
    #4  0x00295e99 in exit () from /boot/system/lib/libroot.so
    #5  0x00202cd5 in _start ()
    #6  0x0010556f in runtime_loader () from /boot/system/runtime_loader
    #7  0x7ffeefec in ?? ()
    (gdb)
    

BTW, there is no print_addon_server component in Trac, setting to print_server for now.

Change History (13)

comment:1 by diver, 14 years ago

Printer type doesn't matter.

comment:2 by diver, 14 years ago

There is also an extra second alert ("init_transport failed.") which would be nice to get rid of, or combine with the first one ("Can't connect to HP JetDirect printer port!").

comment:3 by stargatefan, 14 years ago

try guetenprint.

comment:4 by laplace, 14 years ago

Component: Servers/print_serverServers/print_addon_server

in reply to:  2 comment:5 by laplace, 14 years ago

Replying to diver:

There is also an extra second alert ("init_transport failed.") which would be nice to get rid of, or combine with the first one ("Can't connect to HP JetDirect printer port!").

Agreed, error reporting should be improved.
For this bug however the information that the transport add-on fails seems to be crucial.
Does it only crash when you use HP JetDirect transport add-on? What happens using the "Save to File" transport add-on instead?

in reply to:  3 comment:6 by laplace, 14 years ago

Replying to stargatefan:

try guetenprint.

OT, but it would be interesting how print output quality from the native Haiku PCL6 driver compares to the Gutenprint generic PCL6 driver.

comment:7 by phoudoin, 14 years ago

Hum, I guess HP JetDirect transport add-on is indeed the culprid. I've change its code recently to use the quite standard "transport_address" attribute instead of its own one, maybe I've miss something doing that :-\

Does it used to works fine before, or you just start to use it recently?

comment:8 by diver, 14 years ago

It was the first time I tried to use it. And it seems that it crashes only with HP JetDirect transport add-on. Gutenprint works! Font quality is quite bad, though.

comment:9 by laplace, 14 years ago

hrev39818 cures the symptoms.

in reply to:  8 comment:10 by laplace, 14 years ago

Replying to diver:

It was the first time I tried to use it. And it seems that it crashes only with HP JetDirect transport add-on.

When you used HP JetDrect you were never asked to enter the host name, and for an unknown reason (to me) it crashed then.

Gutenprint works! Font quality is quite bad, though.

What do you mean with that? What settings did you use? Can you attach screen shots of the page and job setup dialogs?

Does the native PCL6 driver generate better results?

comment:11 by diver, 14 years ago

Thanks! It doesn't crash anymore.
I used default settings in Gutenprint, I'll try to play a bit with DPI settings.

comment:12 by laplace, 14 years ago

Resolution: fixed
Status: newclosed

comment:13 by diver, 14 years ago

Changing resolution in Page setup window from 150x150 DPI to 300x300 DPI generates much better results. Unfortunately, I can't compare it with PCL6 driver as it doesn't seem to work, also there is no way to cancel pending job for PCL printer since "Cancel job" button is always disabled. Also Add printer dialog appears with 5 sec delay in such situation. Should I open a new ticket for this issues? Thank you.

Note: See TracTickets for help on using tickets.