* Bug fix: The configuration dialog was never opened, because it could   read the attribute "transport_address" created and set to an empty   string by the print_server when the printer was created.   fEndpoint used an empty host name to connect to and then failed.   Not sure why this caused a crash after closing the error dialog.   Maybe something went wrong in the destructor using an invalid fEndpoint?   Cures the symptoms of ticket #6973.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@39818 a95241bf-73f2-0310-859d-f6bbb57e9c96